force-app/main/default/objects/Behavior_Grading__mdt/Behavior_Grading__mdt.object-meta.xml
<CustomObject>
    <label>Behavior Grading</label>
    <pluralLabel>Behavior Gradings</pluralLabel>
</CustomObject>