force-app/main/default/objects/Behavior_Grading__mdt/fields/customHeader__c.field-meta.xml
<CustomField>
    <fullName>customHeader__c</fullName>
    <label>customHeader</label>
    <length>250</length>
    <type>Text</type>
</CustomField>