force-app/main/default/objects/Behavior_Grading__mdt/fields/customSubject__c.field-meta.xml
<CustomField>
    <fullName>customSubject__c</fullName>
    <label>customSubject</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>