force-app/main/default/objects/Behavior_Grading__mdt/fields/customText__c.field-meta.xml
<CustomField>
    <fullName>customText__c</fullName>
    <label>customText</label>
    <length>50</length>
    <type>Text</type>
</CustomField>