force-app/main/default/objects/Behavior_Grading__mdt/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <length>2</length>
    <type>Text</type>
</CustomField>